# perspectiva_dados_analise

./: .gitignore  20260412_model.ipynb  README.md  main.py  pyproject.toml
