[project]
name = "perspectiva-dados-analise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "polars>=1.41.0",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
